# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_fw_uno_key_vault"
version = "0.1.0"

[lib]
doctest = false

[dependencies]
azihsm_fw_hsm_pal_traits.workspace = true
bitfield-struct = { workspace = true }
zerocopy = { workspace = true }

[lints]
workspace = true
