# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
edition = "2021"
name = "azihsm_fw_uno_drivers_session_store"
version = "0.1.0"

[lib]
bench = false
doctest = false
test = false

[dependencies]
azihsm_fw_hsm_pal_traits = { workspace = true }
azihsm_fw_uno_drivers_part_store = { workspace = true }
